<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dell.musicapplication.AlbumViewer"
    android:background="@color/black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/return_from_album_viewer">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/atras"
            android:background="@color/black"
            android:layout_marginTop="8dp"
            android:layout_marginStart="5dp"
            android:id="@+id/back_image1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textSize="20sp"
            android:background="@color/black"
            android:textColor="@color/white"
            android:id="@+id/back_button1"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/albumArt"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/albumInfo"
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@+id/album_info"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/full_image"
        android:src="@drawable/ainda_duo"/>

</LinearLayout>
